# models

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/tokenized_wikitext/: dataset_dict.json
data/tokenized_wikitext/test/: state.json
data/tokenized_wikitext/train/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/tokenized_wikitext/validation/: state.json
scripts/: commit-msg  push_model.py  rewrite_msg.sh
src/: data.py  evaluate.py  model.py  train.py
tests/: test_data.py  test_e2e.py  test_model.py
