[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-training"
version = "0.1.0"
description = "GPT-2 model training on WikiText dataset"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "datasets>=2.0.0",
    "accelerate",
    "pytest>=7.0.0",
    "pytest-cov",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
