[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-training"
version = "0.1.0"
description = "GPT-2 model training on WikiText dataset"
authors = [
    {name = "Niladri Das"},
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "datasets>=2.0.0",
    "accelerate",
    "pytest>=7.0.0",
    "pytest-cov",
]
optional-dependencies = { dev = ["pre-commit", "black", "isort", "flake8", "yamllint"] }
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
